// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SlidePanelManger Snapshots should render with optional props 1`] = `
<SlidePanelManager
  disclosureAccessory={
    <div>
      Test Accessory
    </div>
  }
  level={2}
  panelBehavior="overlay"
  withDisclosureContainer={[Function]}
>
  <TestChild />
</SlidePanelManager>
`;

exports[`SlidePanelManger Snapshots should render with required props 1`] = `
<SlidePanelManager
  level={2}
  panelBehavior="overlay"
  withDisclosureContainer={[Function]}
>
  <TestChild />
</SlidePanelManager>
`;
